--- a/django-unicorn/djunicorn/templates/_base.html
+++ b/django-unicorn/djunicorn/templates/_base.html
@@ -23,8 +23,8 @@
         <script type="text/javascript" src="{% static 'templates/main/js/main.js' %}"></script>     
     </head>
 
-    <body class="bg-green-50">
-        <div class="container mx-auto mt-4">
+    <body class="bg-slate-100 w-full">
+        <div class="container w-full">
             {% block content %}
             {% endblock content %}
         </div>
