Inception - Completed |→ + Tailwind implementation, following <https://tailwindcss.com/docs/container> documentation (layout, sizing, background, borders, effects, table)... | Fully functional.

--- a/django-unicorn/app/templates/unicorn/books/table.html
+++ b/django-unicorn/app/templates/unicorn/books/table.html
@@ -26,7 +26,7 @@
                 </td>
                 {% for field in table_fields %}
                     <td class="bg-green-600 first:rounded-l-lg last:rounded-r-lg p-2 text-green-100 tracking-widest border-green-100">
-                        {{ field }}
+                        {{ field|title }}
                     </td>
                 {% endfor %}
             </tr>
