--- a/django-unicorn/app/templates/app/index.html
+++ b/django-unicorn/app/templates/app/index.html
@@ -1,10 +1,20 @@
 {% extends "_base.html" %}
  
 {% block content %}
-      <h1 class="text-3xl text-green-800">
-          Django Unicorn
-    </h1>
-      <h3 class="text-3x1 text-green-800">
-          Django Unicorn
-    </h3>
+    <div class="mr-5">
+        <h1 class="text-3xl text-green-800">
+              Django Unicorn
+        </h1>
+        <h3 class="text-3x1 text-green-800">
+              Django Unicorn
+        </h3>
+        <ul class="text-3x1 text-green-800">
+          <li>
+              | <a href="{% url 'books_demo' %}">Books demo</a>
+          </li>
+          <li>
+              | <a href="{% url 'books_view' %}">Books view</a>
+          </li>
+        </ul>
+    </div>
 {% endblock content %}
