--- a/django-unicorn/app/templates/unicorn/books/row.html
+++ b/django-unicorn/app/templates/unicorn/books/row.html
@@ -16,52 +16,62 @@
         <td class="py-6">
             {% if is_editing %}
                 <button unicorn:click="save"
-                    class="btn btn-outline-success rounded bg-green-600 hover:bg-green-400 p-1 px-4 text-white shadow-xl duration-500">Save</button>
-                <button unicorn:click.discard="cancel" 
-                    class="btn btn-outline-gray rounded bg-slate-400 hover:bg-slate-600 p-1 px-2 text-white shadow-xl duration-500" >Cancel</button>
+                    class="btn btn-outline-success rounded bg-green-600 hover:bg-green-400 p-1 px-4
+						   text-white shadow-xl duration-500">Save</button>
+                <button unicorn:click.discard="cancel"
+                    class="btn btn-outline-gray rounded bg-slate-400 hover:bg-slate-600 p-1 px-2
+						   text-white shadow-xl duration-500" >Cancel</button>
             {% else %}
-                <button unicorn:click="edit" 
-                    class="btn btn-outline-tertiary rounded bg-blue-600 hover:bg-blue-400 p-1 px-4 text-white shadow-xl duration-500">Edit</button>
-                <button unicorn:click="edit" 
-                    class="btn btn-outline-gray rounded bg-slate-100 hover:bg-slate-100 p-1 px-2 text-white shadow-xl duration-500 min-w-16" >Edit</button>
+                <button unicorn:click="edit"
+                    class="btn btn-outline-tertiary rounded bg-blue-600 hover:bg-blue-400 p-1 px-4
+						   text-white shadow-xl duration-500">Edit</button>
+                <button unicorn:click="edit"
+                    class="btn btn-outline-gray rounded bg-slate-100 hover:bg-slate-100 p-1 px-2
+						   text-white shadow-xl duration-500 min-w-16" >Edit</button>
             {% endif %}
         </td>
         <td>
             {% if is_editing %}
-                <input type="text" unicorn:model.defer="book.title" value="{{ book.title }}" class="form-control rounded border-green-700 shadow-sm text-green-900 tracking-wider text-xs"/>
+                <input type="text" unicorn:model.defer="book.title" value="{{ book.title }}"
+					class="form-control rounded border-green-700 shadow-sm text-green-900
+						   tracking-wider text-xs"/>
             {% else %}
-                <font 
+                <font
                     class="border-green-700 shadow-sm text-green-900 tracking-wider">
                     {{ book.title }}
-                </font>                
+                </font>
             {% endif %}
         </td>
         <td>
             {% if is_editing %}
-                <input type="text" unicorn:model.defer="book.author" value="{{ book.author }}" class="form-control rounded border-green-700 shadow-sm text-green-900 tracking-wider text-xs"/>
+                <input type="text" unicorn:model.defer="book.author" value="{{ book.author }}"
+					class="form-control rounded border-green-700 shadow-sm text-green-900
+						   tracking-wider text-xs"/>
             {% else %}
-                <font 
+                <font
                     class="border-green-700 shadow-sm text-green-900 tracking-wider text-md">
                     {{ book.author }}
-                </font>                
+                </font>
             {% endif %}
         </td>
         <td>
             {% if is_editing %}
                 <input type="text" unicorn:model.defer="book.date_published" value="{{ date_pub }}"
                                                     placeholder="ex: 1997-05-15"
-                    class="form-control rounded border-green-700 shadow-sm text-green-900 tracking-wider text-xs"/>
+                    class="form-control rounded border-green-700 shadow-sm text-green-900
+						   tracking-wider text-xs"/>
             {% else %}
-                <font 
+                <font
                     class="border-green-700 shadow-sm text-green-900 tracking-wider text-md">
                     {{ date_pub }}
-                </font>                
+                </font>
             {% endif %}
         </td>
         <td class="border-green-400">
             {% if is_editing %}
                 <select  unicorn:model.defer="book.country" id="country"
-                    class="form-select rounded border-green-700 shadow-sm text-green-900 tracking-wider text-sm max-w-20">
+                    class="form-select rounded border-green-700 shadow-sm text-green-900
+						   tracking-wider text-sm max-w-20">
                     <option {{ select_country }}>Select a country...</option>
                     {% for country in countries %}
 
@@ -70,15 +80,15 @@
                             {% define 'selected' as country_selected %}
                         {% endif %}
 
-                        <option value="{{ country.0 }}" 
+                        <option value="{{ country.0 }}"
                                 {{ country_selected }}>{{ country.1 }}</option>
                     {% endfor %}
                 </select>
             {% else %}
-                <font 
+                <font
                     class="border-green-700 shadow-sm text-green-900 tracking-wider text-sm">
                     {{ book.country }}
-                </font>                
+                </font>
             {% endif %}
         </td>
     </tr>
