--- a/django-unicorn/app/templates/unicorn/books/table.html
+++ b/django-unicorn/app/templates/unicorn/books/table.html
@@ -25,7 +25,8 @@
                     &nbsp;
                 </td>
                 {% for field in table_fields %}
-                    <td class="bg-green-600 first:rounded-l-lg last:rounded-r-lg p-2 text-green-100 tracking-widest border-green-100">
+                    <td class="bg-green-600 first:rounded-l-lg last:rounded-r-lg p-2
+							   text-green-100 tracking-widest border-green-100">
                         {{ field|title }}
                     </td>
                 {% endfor %}
