--- a/django-unicorn/app/templates/app/index.html
+++ b/django-unicorn/app/templates/app/index.html
@@ -21,6 +21,9 @@
           <li>
               | <a href="{% url 'ourcards_index' %}">Our Cards</a>
           </li>
+          <li>
+              | <a href="{% url 'trainings_dashboard' %}">Trainings Dashboard</a>
+          </li>         
         </ul>
     </div>
 {% endblock content %}
