--- a/django-unicorn/djunicorn/templates/_base.html
+++ b/django-unicorn/djunicorn/templates/_base.html
@@ -15,6 +15,14 @@
 
         <link rel="stylesheet" href="{% static 'templates/main/css/main.css' %}">
 
+        
+        <!-- Fontawesome -->
+        <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'fontawesomefree/css/regular.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">    
+        
+
         {% load unicorn %}
         <script defer src="https://unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js"></script>
         <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
