Boiler plate / Unicorn app template code implemented...

--- a/django-unicorn/app/templates/app/index.html
+++ b/django-unicorn/app/templates/app/index.html
@@ -24,6 +24,9 @@
           <li>
               | <a href="{% url 'trainings_dashboard' %}">Trainings Dashboard</a>
           </li>         
+          <li>
+              | <a href="{% url 'webscraping' %}">Webscraping</a>
+          </li>         
         </ul>
     </div>
 {% endblock content %}
