--- a/django-unicorn/webscraping/templates/unicorn/webscraping/webscrapes.html
+++ b/django-unicorn/webscraping/templates/unicorn/webscraping/webscrapes.html
@@ -5,7 +5,7 @@
 {% load define_action %}
 
 <div unicorn:view>
-    {% unicorn 'books.manage' parent=self %}
+    {% unicorn 'webscrape.manage' parent=self %}
 
     <ul class="messages messages mt-20 block bg-slate-600 p-4 rounded text-green-100 text-center hidden">
         {% if messages %}
@@ -17,7 +17,7 @@
         {% endif %}
     </ul>
 
-    {% unicorn 'books.filter' parent=self %}
+    {% unicorn 'webscrape.filter' parent=self %}
     <table class="table table-auto rounded border-green-300">
         <thead class="p-4 text-gray">
             <tr>
@@ -32,11 +32,10 @@
                 {% endfor %}
             </tr>
         </thead>
-        <tbody id="books-body">
-            {% for book in books %}
-                {% unicorn 'books.row' book=book key=book.id parent=self %}
+        <tbody id="webscrape-body">
+            {% for webscrape in webscrapes %}
+                {% unicorn 'webscraping.row' webscrape=webscrape key=webscrape.id parent=self %}
             {% endfor %}
         </tbody>
-        <!-- span unicorn:visible.threshold-100="add_count"></span -->
     </table>
 </div>
