--- a/django-unicorn/webscraping/templates/webscraping/webscrape.html
+++ b/django-unicorn/webscraping/templates/webscraping/webscrape.html
@@ -37,7 +37,7 @@
                 <!-- row 2 | -->
                 <div class="row forms mt-10 overflow-auto">
                     <!-- webscraping/webscrape.html unicorn template --> 
-                    {% unicorn 'webscraping.webscrapes' %}
+                    {% unicorn 'webscrape.webscrape' %}
                      
                 </div>
                 <!-- /row 2 -->
