--- a/django-unicorn/webscraping/templates/unicorn/webscrape/webscrape.html
+++ b/django-unicorn/webscraping/templates/unicorn/webscrape/webscrape.html
@@ -1,11 +1,10 @@
 
-
 <!-- books/table.html -->
 {% load unicorn %}
 {% load define_action %}
 
 <div unicorn:view>
-    {% unicorn 'webscraping.manage' parent=self %}
+    {% unicorn 'webscrape.manage' parent=self %}
 
     <ul class="messages messages mt-20 block bg-slate-600 p-4 rounded text-green-100 text-center hidden">
         {% if messages %}
@@ -17,7 +16,6 @@
         {% endif %}
     </ul>
 
-    {% unicorn 'webscraping.filter' parent=self %}
     <table class="table table-auto rounded border-green-300">
         <thead class="p-4 text-gray">
             <tr>
@@ -34,7 +32,7 @@
         </thead>
         <tbody id="webscrape-body">
             {% for webscrape in webscrapes %}
-                {% unicorn 'webscraping.row' webscrape=webscrape key=webscrape.id parent=self %}
+                {% unicorn 'webscrape.row' webscrape=webscrape key=webscrape.id parent=self %}
             {% endfor %}
         </tbody>
     </table>
