--- a/django-unicorn/app/templates/app/index.html
+++ b/django-unicorn/app/templates/app/index.html
@@ -25,10 +25,10 @@
               | <a href="{% url 'trainings_dashboard' %}">Trainings Dashboard</a>
           </li>         
           <li>
-              | <a href="{% url 'webscrape' %}">Webscrape</a>
+              | <a href="{% url 'webscrape' %}" id="webscrape">Webscrape</a>
           </li>         
           <li>
-              | <a href="{% url 'webscraping' %}">Webscraping data</a>
+              | <a href="{% url 'webscraping' %}" id="webscraping">Webscraping data</a>
           </li>         
         </ul>
     </div>
